implement reset button on main screen

--- a/static/index.html
+++ b/static/index.html
@@ -16,9 +16,11 @@
     <p id="fps">0 fps</p>
     <div id="backdrop">
         <div id="modal">
+            <h2>Paused</h2>
             <p>Please enable first-person viewing mode</p>
             <button id="enable">Enable</button>
             <button id="save-image">Save Image</button>
+            <button id="reset">Reset</button>
         </div>
       </div>
     <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
