--- a/static/index.html
+++ b/static/index.html
@@ -272,8 +272,16 @@
                     : hit_record.material.refraction_index;
                 
                 vec3 unit_direction = normalize(r.direction);
-                vec3 refracted = refract(unit_direction, hit_record.normal, refraction_ratio);
-                scattered_ray = Ray(hit_record.hit_point, refracted);
+                float cos_theta = min(dot(-unit_direction, hit_record.normal), 1.0);
+                float sin_theta = sqrt(1.0 - cos_theta * cos_theta);
+
+                bool cannot_refract = refraction_ratio * sin_theta > 1.0;
+
+                vec3 direction;
+                if (cannot_refract) direction = reflect(unit_direction, hit_record.normal);
+                else direction = refract(unit_direction, hit_record.normal, refraction_ratio);
+
+                scattered_ray = Ray(hit_record.hit_point, direction);
 
                 // never absorbs light
                 return true;
