delete stray info log

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
             <h2>Paused</h2>
             <p>Please enable first-person viewing mode</p>
             <button id="enable">Enable</button>
-            <button id="disable">Disable</button>
+            <button id="cancel">Cancel</button>
             <button id="save-image">Save Image</button>
             <button id="reset">Reset</button>
         </div>
